--- a/package.json
+++ b/package.json
@@ -5,8 +5,12 @@
   "main": "dist/js/app.js",
   "dependencies": {
     "angular": "^1.6.0",
-    "materialize-css": "^0.97.8",
-    "webpack": "^1.14.0"
+    "angular-animate": "^1.6.0",
+    "angular-ui-router": "^0.3.2",
+    "bigscreen": "file:bigscreen",
+    "font-awesome": "^4.7.0",
+    "jquery": "^3.1.1",
+    "materialize-css": "^0.97.8"
   },
   "devDependencies": {
     "autoprefixer-loader": "^3.2.0",
@@ -15,9 +19,12 @@
     "babel-loader": "^5.3.2",
     "babel-runtime": "^5.8.25",
     "css-loader": "^0.23.1",
+    "extract-text-webpack-plugin": "^0.9.0",
+    "file-loader": "^0.9.0",
     "html-loader": "^0.4.3",
     "ng-cache-loader": "0.0.14",
     "style-loader": "^0.13.0",
+    "url-loader": "^0.5.7",
     "webpack": "^1.14.0"
   },
   "scripts": {
